microservice/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: emailservice-vs
spec:
  hosts:
    - emailservice.default.svc.cluster.local
  http:
    - name: primary
      route:
        - destination:
            host: emailservice
          weight: 100
        - destination:
            host: emailservice-canary
          weight: 0
